chore: add filter params
